# forkmuffin

./: .gitignore  CMakeLists.txt  README.md
data/levels/: test.json
src/: CMakeLists.txt  EditorMainWindow.cpp  EditorMainWindow.h  GameMainWindow.cpp  GameMainWindow.h  editor_main.cpp  game.ui  game_main.cpp
src/common/: Block.cpp  Block.h  Camera.cpp  Camera.h  CanvasWidget.cpp  CanvasWidget.h  DebugLines.cpp  DebugLines.h  Level.cpp  Level.h  RenderManager.cpp  RenderManager.h  Renderable.cpp  Renderable.h  Serializable.h  StrayImage.cpp  StrayImage.h  TextureManager.cpp  TextureManager.h  ValuesSelector.h  saveload.cpp  saveload.h  utils.cpp  utils.h
src/editor/: EditorCanvasWidget.cpp  EditorCanvasWidget.h  EditorMainWindow.cpp  EditorMainWindow.h  Grid.cpp  Grid.h  editor.ui  editor_main.cpp
src/editor/commands/: AddDeleteImageCommand.cpp  AddDeleteImageCommand.h  AddImageCommand.cpp  AddImageCommand.h  ChangeStrayImageNameCommand.cpp  ChangeStrayImageNameCommand.h  ChangeStrayImageParamsCommand.cpp  ChangeStrayImageParamsCommand.h  DeleteImageCommand.cpp  DeleteImageCommand.h  EditorCommand.cpp  EditorCommand.h  EraseBlockCommand.cpp  EraseBlockCommand.h  ImageCommandBase.cpp  ImageCommandBase.h  PlaceBlockCommand.cpp  PlaceBlockCommand.h  PlaceCurrentBlockCommand.cpp  PlaceCurrentBlockCommand.h  ToggleBlockCommand.cpp  ToggleBlockCommand.h
src/editor/tools/: BlockTool.cpp  BlockTool.h  Tool.cpp  Tool.h
src/editor/widgets/: BlockSelectorWidget.cpp  BlockSelectorWidget.h  BlockWidget.cpp  BlockWidget.h  StraySelectorWidget.cpp  StraySelectorWidget.h  block.ui  block_selector.ui  stray_images.ui
src/game/: GameMainWindow.cpp  GameMainWindow.h  Muffin.cpp  Muffin.h  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsObject.cpp  PhysicsObject.h  Player.cpp  Player.h  game.ui  game_main.cpp
test/: CMakeLists.txt  block_saveload.cpp  camera.cpp  level_saveload.cpp  pretty_print.cpp  pretty_print.h  utils.cpp
